--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
     "baseUrl": ".",
     "paths": {
       "@root/*": ["./*"]
-    }
+    },
+    "removeComments": true
   },
   "include": ["src", "types"],
   "exclude": ["node_modules"]
